# rust-postgres

./: docker-compose.yml
.github/workflows/: ci.yml
codegen/: Cargo.toml
codegen/src/: sqlstate.rs
postgres/: CHANGELOG.md  Cargo.toml
postgres-derive/: CHANGELOG.md  Cargo.toml
postgres-derive/src/: tosql.rs
postgres-openssl/: CHANGELOG.md  Cargo.toml
postgres-protocol/src/authentication/: sasl.rs
postgres-protocol/src/message/: backend.rs
postgres-protocol/src/password/: mod.rs
postgres-replication/src/: protocol.rs
postgres-types/: CHANGELOG.md  Cargo.toml
postgres-types/src/: chrono_04.rs  lib.rs
postgres/src/: client.rs  config.rs
tokio-postgres/: CHANGELOG.md  Cargo.toml
tokio-postgres/src/: client.rs  config.rs  connect_raw.rs  connect_tls.rs  connection.rs  copy_both.rs  copy_in.rs  copy_out.rs  lib.rs  prepare.rs  query.rs  row.rs  simple_query.rs
tokio-postgres/src/error/: mod.rs
tokio-postgres/tests/test/: main.rs
tokio-postgres/tests/test/types/: chrono_04.rs  jiff_01.rs  jiff_02.rs  time_03.rs
